style.css
body {
    background: #272935;
    color: #6272A4;
    font-family: 'Inconsolata', monospace;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
nav{
    background-color: #44475B;
    height: 100%;
    width: 20%;
    position: fixed;
    overflow: hidden;
    display: flex;
    flex-direction: column;
}
ul {
    list-style: none;
}
a .fa-facebook, a:visited{
    text-decoration: none;
    color: #34599D;
    background-color: #ffffff;
    border-radius: 50%;
    font-size: 2rem;
}
a .fa-linkedin, a:visited{
    text-decoration: none;
    color: #2B7FB0;
    background-color: #ffffff;
    font-size: 2rem;
}
a .fa-twitter-square, a:visited{
    text-decoration: none;
    color: #3CACED;
    background-color: #ffffff;
    font-size: 2rem;
}
a .fa-reddit, a:visited{
    text-decoration: none;
    color: #6098CE;
    background-color: #ffffff;
    border-radius: 50%;
    font-size: 2rem;
}
.navigation li{
    display: block;
    padding: 10px 0px;
}

.wrapper {
    bottom: 0px;
    position: absolute;
    text-align: center;
}
.social li{
    display: inline;
}

main{
    margin-left: 22%;
    height: 100%;
    width: 75%;
    display: grid;
    grid-template-columns: 1fr 2fr 1fr;
    grid-template-rows: 1fr 1fr;
    grid-template-areas: 
            "reddit history github"
            "reddit clock github";
    grid-gap: 10px;
}
h1 {
    color: #87E1F5;
}
article {
    border-left: #45485C solid 2px;
    padding-left: 5px;
    color: #FEFEF8;
}
.yellow-text {
    color: #F0F88C;
}
.pink-text {
    color: #ED75C5;
}
.reddit{
    grid-area: reddit;
    overflow: hidden;
}

.history {
    grid-area: history;
}
.clock {
    grid-area: clock;
    text-align: center;
    font-size: 2rem;
    justify-self: center;
    align-self: center;

}
.github {
    grid-area: github;
}

